# worldgen

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: app.ts
src/: climate.rs  config.rs  elevation.rs  grid.rs  hydrology.rs  lib.rs  main.rs  noise.rs  render.rs  rng.rs
src/plates/: boundary.rs  distance.rs  grow.rs  mod.rs  properties.rs  seed.rs
